<resources>
    <string name="app_name">Sleep Better</string>
    <string name="action_settings">Settings</string>
    <string name="take_questionnaire_button_label">Take Questionnaire</string>
    <string name="sleep_better_button_label">Sleep Better Tonight</string>
    <string name="export_results_button_label">Export Your Results</string>
    <string name="logout_button_label">LogOut</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Name</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="definition_text">This mobile application is a prototype of the science fair project \"A sound-based mobile application for people with sleep disorders\". </string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

    <string name="question_no_1">1) How many hours do you usually sleep during a weekday night prior to work?</string>
    <string name="question_no_2">2) When do you confront sleep problems; before sleeping, while sleeping, while waking up, or all of them?</string>
    <string name="question_no_3">3) Do you take any sedatives, sleeping medications or alcohol to help you sleep? </string>
    <string name="question_no_4">4) On a scale of 1-10, how would you describe your sleep quality? (1: very bad, 10:very good)</string>
    <string name="question_no_6">5) On a scale of 1-10, what is your level of fatigue over the last month?(1:exhausted, 10:vigorous)</string>
    <string name="question_no_7">7) If your answer is yes to the previous question, did it help to solve your problem?</string>
    <string name="question_no_5">6) Have you ever tried to listen to any sounds (white noise, nature sounds, etc.) to help you sleep? </string>
    <string name="answer_2_label_a">Before sleeping</string>
    <string name="answer_2_label_b">While sleeping</string>
    <string name="answer_2_label_c">While waking up</string>
    <string name="answer_2_label_d">All of them</string>
    <string name="answer_3_label_a">Yes</string>
    <string name="answer_3_label_b">No</string>
    <string name="answer_3_label_c">1</string>
    <string name="answer_3_label_d">2</string>
    <string name="answer_5_label_a">Yes</string>
    <string name="answer_5_label_b">No</string>
    <string name="answer_5_label_c">450</string>
    <string name="answer_5_label_d">200</string>
    <string name="answer_1_hint">Enter your Answer</string>
    <string name="answer_4_hint">Enter Your Answer (1-10)</string>
    <string name="answer_6_hint">Enter Your Answer (1-10)</string>
    <string name="answer_1">110</string>
    <string name="answer_4">500</string>
    <string name="result_score_message">Thanks for your cooperation!</string>
    <string name="submit">SUBMIT</string>
    <string name="submit_quiz">Submit Your Quiz</string>
    <string name="enter_your_answer_hours">Enter your Answer (hours)</string>
    <string name="before_sleeping">Before sleeping</string>


    <string name="action_about">About me</string>
    <string name="action_color_picker">Color picker</string>
    <string name="favorite_watched_tab">Recently watched</string>
    <string name="recently_watched_tab">Recently watched</string>
    <string name="search_tab">Search YouTube</string>
    <string name="playlists_tab">Playlists</string>

    <string name="search_hint">Search YouTube</string>

    <string name="action_search">Search</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="clear_list">Clear recently played list</string>

    <string name="email">vanste25@gmail.com</string>
    <string name="date">February 2019</string>
    <string name="myName">Nazif Bulut Vardar</string>

    <string name="number_of_videos">Number of videos:</string>
    <string name="status">Status:</string>
    <string name="all_permissions_request">Request permissions</string>
    <string name="ok">ok</string>
    <string name="choose_colors">Choose background and text color</string>
    <string name="cancel">cancel</string>
    <string name="failed_playback">Playback failed!</string>
    <string name="list_empty">List is empty!</string>

    <string name="rock_list">7jTyvm27EsE,W5ntNwS76WM,EpAyaAyWl-M,hBDrBW1XI48</string>
    <string name="pop_list">1ZYbU82GVz4,GwLe50pRnxE,coTD9NpPR2E,NLWqz0TI35o</string>
    <string name="metal_list">H-W55-Srmx4,BxDiQhNO780</string>
    <string name="classical_list">VszFB1v5qbY,178rTrGB-5w,4VjN9C7VZFw</string>
    <string name="piano_list">857bt64SomQ,58GQx4xEdlY,lCOF9LN_Zxs,WI1xExDWVF0,Cnfj6QCGLyA,mYMtxCGqty4</string>
    <string name="electronical_list">bDZ0eUk4E10,RPnbS2o-tqU,GGY6zizgrYw</string>
    <string name="best_rock_list">y8OtzJtp-EM</string>

    <string name="spinner0_title">Listen Music Tonight</string>
    <string name="spinner1_title">Music Length</string>
    <string name="spinner2_title">Music Type</string>
    <string name="playmusic_button">Play Music</string>

    <string-array name="music_arrays">
        <item>ROCK</item>
        <item>POP</item>
        <item>METAL</item>
        <item>CLASSICAL</item>
        <item>PIANO</item>
        <item>ELECTRONICAL</item>
    </string-array>

    <string-array name="time_arrays">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string-array name="time_listen">
        <item>YES</item>
        <item>NO</item>
    </string-array>
</resources>
