<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
                android:background="#f5f5dc"
    tools:context=".MainPageActivity" >

    <!--
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom|end"
            android:background="?attr/colorPrimary"
            android:visibility="visible" />

    </android.support.design.widget.AppBarLayout>
    -->
    <!--
    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" >

        <requestFocus />
    </EditText>
    -->

    <Button
        android:id="@+id/questionnaireButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@drawable/border_drawable"
        android:text="@string/take_questionnaire_button_label"/>

    <Button
        android:id="@+id/sleepbetterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/questionnaireButton"
        android:layout_below="@+id/questionnaireButton"
        android:background="@drawable/border_drawable"
        android:text="@string/sleep_better_button_label" />

    <Button
        android:id="@+id/exportResultsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sleepbetterButton"
        android:background="@drawable/border_drawable"
        android:layout_below="@+id/sleepbetterButton"
        android:text="@string/export_results_button_label" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/exportResultsButton"
        android:background="@drawable/border_drawable"
        android:layout_below="@+id/exportResultsButton"
        android:text="@string/logout_button_label" />
    <LinearLayout
        android:id="@+id/TextViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="200px"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="34dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDefinition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/definition_text"
            android:textAllCaps="false"
            android:textColor="@color/textColorPrimary"/>
    </LinearLayout>
</RelativeLayout>